--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <canvas id="starfield"></canvas>
-    <button id="valentinesButton">Nhấn Vào Đây! ❤</button>
+    <button id="startButton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px 40px; font-size: 24px; background: transparent; color: transparent; border: none; border-radius: 10px; cursor: pointer; z-index: 100;">Bắt Đầu ❤</button>
+    <audio id="bgMusic" loop>
+        <source src="Music_PhepMau.mp3" type="audio/mpeg">
+    </audio>
     <script src="script.js"></script>
   </body>
 </html>
