--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <canvas id="starfield"></canvas>
-    <button id="startButton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 20px 40px; font-size: 24px; background: transparent; color: transparent; border: none; border-radius: 10px; cursor: pointer; z-index: 100;">Bắt Đầu ❤</button>
+    <button id="startButton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 25px 50px; font-size: 28px; font-weight: bold; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: 3px solid white; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 40px rgba(102, 126, 234, 0.6); transition: all 0.3s; font-family: 'Comic Sans MS', cursive;">Valenbell ❤️</button>
     <audio id="bgMusic" loop>
         <source src="Music_PhepMau.mp3" type="audio/mpeg">
     </audio>
