--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <canvas id="starfield"></canvas>
     <button id="startButton" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 25px 50px; font-size: 28px; font-weight: bold; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border: 3px solid white; border-radius: 50px; cursor: pointer; z-index: 100; box-shadow: 0 10px 40px rgba(102, 126, 234, 0.6); transition: all 0.3s; font-family: 'Comic Sans MS', cursive;">Valenbell ❤️</button>
-    <audio id="bgMusic" loop>
+    <audio id="bgMusic" loop preload="auto">
         <source src="Music_PhepMau.mp3" type="audio/mpeg">
     </audio>
     <script src="script.js"></script>
